NXP-32876: Don't trigger automatic versioning on related text computation